welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  if (a<c-9 || a<b-9 || b<c-9 || b<a-9 ||c<a-9 || c<b-9 ||){
                                                        ^